--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, "Help") %>
+<% provide(:title, "About") %>
     <h1>About</h1>
     <p>
       The <a href="https://www.railstutorial.org/"><em>Ruby on Rails
@@ -9,4 +9,4 @@
       <a href="http://rubyonrails.org/">Ruby on Rails</a>.
       This is the sample application for the tutorial.
     </p>
- 
+  
